resolucion de conflictos hecho por chatgpt

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -49,7 +49,7 @@ img_path: /assets/img/redes-locales-22-23/
 - UD13 - [Capa de Transporte](/posts/capa-transporte)
 - UD14 - NAT estático, dinámico y PAT: [NAT o enmascaramiento IP](/posts/nat/)
 - UD15 - IPv6: [Protocolo IPv6](/posts/protocolo-ipv6/)
-- UD16 - La Capa de Aplicación. Servicios de Red. DHCP y DNS.
+- UD16 - [Capa de Aplicación](/posts/capa-aplicacion/)
 - UD17 - Resolución de conflictos en una red local.
 - UD18 - Protección, vigilancia y soporte de redes.
 
