--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -235,3 +235,4 @@ Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el 
 - [Características de NAT](https://ccnadesdecero.es/caracteristicas-nat/)
 - [Tipos de NAT](https://ccnadesdecero.es/tipos-nat/)
 - [Ventajas y Desventajas de NAT](https://ccnadesdecero.es/ventajas-desventajas-nat/)
+- [Dynamic PAT](https://www.practicalnetworking.net/series/nat/dynamic-pat/)
