--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -50,8 +50,8 @@ img_path: /assets/img/redes-locales-22-23/
 - UD14 - NAT estático, dinámico y PAT: [NAT o enmascaramiento IP](/posts/nat/)
 - UD15 - IPv6: [Protocolo IPv6](/posts/protocolo-ipv6/)
 - UD16 - [Capa de Aplicación](/posts/capa-aplicacion/)
-- UD17 - Resolución de conflictos en una red local.
-- UD18 - Protección, vigilancia y soporte de redes.
+- UD17 - [Resolución de conflictos en una red local](/posts/resolucion-conflictos-lan)
+- UD18 - [Protección, vigilancia y soporte de redes](/posts/proteccion-vigilancia-soporte-redes)
 
 - P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer/)
 - [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
