--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -216,18 +216,18 @@ PAT intenta conservar el puerto de origen inicial. Sin embargo, si el puerto de 
 {:.subsubsection}
 #### Ejemplo de funcionamiento PAT
 
-Supongamos que tenemos un host, que llamaremos CLIENTE y que tiene por dirección IP 10.1.1.5 y máscara de toda la red 255.0.0.0, que quiere acceder a Internet solicitando páginas a través de su navegador. La conexión a Internet se ha realizado en otro host de la red al que llamaremos SERVIDOR con dirección IP 10.1.1.1 y que está en la misma subred que CLIENTE.
+Supongamos que tenemos un host, que llamaremos CLIENTE y que tiene por dirección IP 10.1.1.5 y máscara de toda la red 255.0.0.0, que quiere acceder a Internet solicitando páginas a través de su navegador. La conexión a Internet se ha realizado en otro host de la red al que llamaremos ROUTER con dirección IP 10.1.1.1 y que está en la misma red que CLIENTE.
 
-Cuando SERVIDOR realiza una conexión a Internet, su proveedor le proporciona una dirección IP a la interfaz de red WAN por la que se conecta remotamente que es 213.97.2.12.
+Cuando el ROUTER realiza una conexión a Internet, su proveedor le proporciona una dirección IP a la interfaz de red WAN por la que se conecta remotamente que es 213.97.2.12.
 
 Debemos tener en cuenta que los pasos 1 y 4 se producen dentro de una LAN, mientras que los números 2 y 3 proceden de una WAN.
 
 ![img-description](ejemploNat.png)
 _Esquema de un ejemplo de utilización de enmascaramiento IP_
 
-En CLIENTE, configuramos TCP/IP para que la ruta por defecto apunte a SERVIDOR. Por otra parte, por ejemplo, el navegador pediría datos utilizando un puerto que el servidor que le brinde las páginas aprovechará para enviárselas con la seguridad de que el navegador se quedó escuchando por ese puerto.
+El CLIENTE lo configuraremos para que la ruta por defecto apunte a ROUTER.
 
-Si el navegador en CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto a SERVIDOR. Si SERVIDOR tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP de CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web de dirección 225.10.2.150. Cuando el servidor web le conteste, SERVIDOR sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente.
+Si el navegador en el CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como el CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto al ROUTER. Si el ROUTER tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP del CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web cuya dirección es 225.10.2.150. Cuando el servidor web le conteste, el ROUTER sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente, es decir, sin enterarse de nada.
 
 ## Bibliografía
 
