--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -229,6 +229,24 @@ El CLIENTE lo configuraremos para que la ruta por defecto apunte a ROUTER.
 
 Si el navegador en el CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como el CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto al ROUTER. Si el ROUTER tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP del CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web cuya dirección es 225.10.2.150. Cuando el servidor web le conteste, el ROUTER sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente, es decir, sin enterarse de nada.
 
+![img-description](ejemploNat2.png)
+_Ejemplo enmascaramiento IP sin cambio de puerto_
+
+![img-description](ejemploNat3.png)
+_Ejemplo enmascaramiento IP con cambio de puerto_
+
+![imgDescription](dynamic-pat-initial.png)
+_Ejemplo de enmascaramiento IP: Envío_
+
+![imgDescription](dynamic-pat-return.png)
+_Ejemplo de enmascaramiento IP: Respuesta_
+
+![imgDescription](dynamic-pat-failed-inbound-packet.png)
+_Ejemplo de enmascaramiento IP: Conflicto de puerto_
+
+![imgDescription](dynamic-pat-non-random-src-port-v5.png)
+_Ejemplo de enmascaramiento IP: Conflicto de mismo puerto_
+
 ## Bibliografía
 
 - [Conversión de direcciones de red (NAT)](https://www.ibm.com/docs/es/i/7.2?topic=concepts-network-address-translation)
