--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -235,6 +235,9 @@ _Ejemplo enmascaramiento IP sin cambio de puerto_
 ![img-description](ejemploNat3.png)
 _Ejemplo enmascaramiento IP con cambio de puerto_
 
+{:.subsubsection}
+#### Otro ejemplo de funcionamiento PAT
+
 ![imgDescription](dynamic-pat-initial.png)
 _Ejemplo de enmascaramiento IP: Envío_
 
