--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -49,7 +49,7 @@ Sin NAT, el agotamiento del espacio de direcciones IPv4 habría ocurrido mucho a
 
 NAT tiene muchos usos, pero el principal es conservar las direcciones IPv4 públicas. Esto se logra al permitir que las redes utilicen direcciones IPv4 privadas internamente y al proporcionar la traducción a una dirección pública solo cuando sea necesario. NAT tiene el beneficio percibido de agregar un grado de privacidad y seguridad a una red, ya que oculta las direcciones IPv4 internas de redes externas.
 
-Los routers con NAT habilitada se pueden configurar con una o más direcciones IPv4 públicas válidas. Estas direcciones públicas se conocen como “NAT pool”. Cuando un dispositivo interno envía tráfico fuera de la red, el router con NAT habilitada traduce la dirección IPv4 interna del dispositivo a una dirección pública del conjunto de NAT. Para los dispositivos externos, todo el tráfico entrante y saliente de la red parece tener una dirección IPv4 pública del pool de direcciones proporcionado.
+Los routers con NAT habilitada se pueden configurar con una o más direcciones IPv4 públicas válidas. Estas direcciones públicas se conocen como "NAT pool". Cuando un dispositivo interno envía tráfico fuera de la red, el router con NAT habilitada traduce la dirección IPv4 interna del dispositivo a una dirección pública del conjunto de NAT. Para los dispositivos externos, todo el tráfico entrante y saliente de la red parece tener una dirección IPv4 pública del pool de direcciones proporcionado.
 
 En general, los routers NAT funcionan en la frontera de una red de rutas internas. Una red stub es una o más redes con una única conexión a su red vecina, una entrada y una salida de la red. En el ejemplo de la ilustración, el R2 es un router de frontera. Visto desde el ISP, el R2 forma una red stub.
 
@@ -114,23 +114,23 @@ Observa que la PC1 tiene distintas direcciones locales y globales, mientras que 
 
 Existen 3 tipos de NAT:
 
-- NAT estática (de correlación)
-- NAT dinámica (ocultación)
+- NAT estático (de correlación)
+- NAT dinámico (ocultación)
 - PAT (con correlación de puerto)
 
 {:.subsection}
-### NAT estática
+### NAT estático
 
-La NAT estática consiste en una asignación uno a uno entre direcciones locales y globales. Estas asignaciones son configuradas por el administrador de red y se mantienen constantes.
-
-En la ilustración, el R2 se configuró con las asignaciones estáticas para las direcciones locales internas del Svr1, la PC2 y la PC3. Cuando estos dispositivos envían tráfico a Internet, sus direcciones locales internas se traducen a las direcciones globales internas configuradas. Para redes externas, estos dispositivos parecen tener direcciones IPv4 públicas.
+El NAT estático consiste en una asignación uno a uno entre direcciones locales y globales. Estas asignaciones son configuradas por el administrador de red y se mantienen constantes.
 
 ![NAT Estático](NAT-Estatico.png)
 _NAT Estático_
 
-La NAT estática es particularmente útil para servidores web o dispositivos que deben tener una dirección coherente a la que se pueda acceder desde Internet, como el servidor web de una empresa. También es útil para dispositivos que deben ser accesibles por personal autorizado cuando se encuentra fuera del sitio, pero no por el público en general en Internet. Por ejemplo, un administrador de red de PC4 puede usar SSH para obtener acceso a la dirección global interna de Svr1 (209.165.200.226). R2 traduce esta dirección global interna a la dirección local interna 192.168.10.10 y conecta la sesión a Svr1.
+En la ilustración, el R2 se configuró con las asignaciones estáticas para las direcciones locales internas del Svr1, el PC2 y el PC3. Cuando estos dispositivos envían tráfico a Internet, sus direcciones locales internas se traducen a las direcciones globales internas configuradas. Para redes externas, estos dispositivos parecen tener direcciones IPv4 públicas.
 
-La NAT estática requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+El NAT estático es particularmente útil para servidores web o dispositivos que deben tener una dirección coherente a la que se pueda acceder desde Internet, como el servidor web de una empresa. También es útil para dispositivos que deben ser accesibles por personal autorizado cuando se encuentra fuera del sitio, pero no por el público en general en Internet. Por ejemplo, un administrador de red de PC4 puede usar SSH para obtener acceso a la dirección global interna de Svr1 (209.165.200.226). R2 traduce esta dirección global interna a la dirección local interna 192.168.10.10 y conecta la sesión a Svr1.
+
+El NAT estático requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
 
 {:.question}
 ¿Un router con NAT estática convierte a un router en un dispositivo de capa 4?
@@ -145,12 +145,18 @@ Para configurar una NAT estática puedes seguir los pasos del artículo [NAT Est
 {:.subsection}
 ### NAT dinámica
 
-La NAT dinámica utiliza un pool de direcciones públicas y las asigna según el orden de llegada. Cuando un dispositivo interno solicita acceso a una red externa, la NAT dinámica asigna una dirección IPv4 pública disponible del pool.
-
-En la figura, PC3 ha accedido a Internet utilizando la primera dirección disponible en el pool NAT dinámico. Las demás direcciones siguen disponibles para utilizarlas. Al igual que la NAT estática, la NAT dinámica requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+El NAT dinámico utiliza un pool de direcciones públicas y las asigna según el orden de llegada. Cuando un dispositivo interno solicita acceso a una red externa, el NAT dinámico asigna una dirección IPv4 pública disponible del pool.
 
 ![NAT Estático](NAT-Dinamica.png)
 _NAT dinámica_
+
+En la figura, el PC3 ha accedido a Internet utilizando la primera dirección disponible en el pool NAT dinámico. Las demás direcciones siguen disponibles para utilizarlas. Al igual que el NAT estático, el NAT dinámico requiere que haya suficientes direcciones públicas disponibles para satisfacer la cantidad total de sesiones de usuario simultáneas.
+
+{:.question}
+¿Cuántos usuarios pueden tener acceso a internet con un pool de 3 direcciones IP?
+
+{:.question}
+¿Cuántos usuarios simultáneos pueden tener acceso a internet con un pool de 3 direcciones IP?
 
 {:.question}
 ¿Un router con NAT dinámica convierte a un router en un dispositivo de capa 4?
@@ -168,12 +174,28 @@ Para configurar una NAT estática puedes seguir los pasos del artículo [NAT Din
 La traducción de la dirección del puerto (PAT, Port Address Translation), también conocida como "NAT con sobrecarga", asigna varias direcciones IPv4 privadas a una única dirección IPv4 pública o a algunas direcciones. Esto es lo que hacen la mayoría de los routers domésticos. El ISP asigna una dirección al router, sin embargo, varios miembros del hogar pueden acceder simultáneamente a Internet. Esta es la forma más común de NAT tanto para el hogar como para la empresa.
 
 {:.question}
+¿Qué es el ISP?
+
+{:.question}
 ¿Qué tipo de NAT usan la mayoría de los routers domésticos?
 
-Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a que cada dirección privada también se rastrea con un número de puerto. Cuando un dispositivo inicia una sesión TCP / IP, genera un valor de puerto de origen TCP o UDP, o un ID de consulta especialmente asignado para ICMP, para identificar de forma única la sesión. Cuando el router NAT recibe un paquete del cliente, utiliza su número de puerto de origen para identificar de forma exclusiva la traducción NAT específica.
+Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a que cada dirección privada también se rastrea con un número de puerto. Cuando un dispositivo inicia una comunicación, genera un valor de puerto de origen TCP o UDP para identificar de forma única la sesión. Cuando el router NAT recibe un paquete del cliente, utiliza su número de puerto de origen para identificar de forma exclusiva la traducción NAT específica.
 
-![Proceso de PAT](Proceso-de-PAT.gif)
-_Proceso de PAT_
+![Proceso de PAT](Proceso-de-PAT-0.png)
+_Proceso de PAT: Paso 1_
+
+![Proceso de PAT](Proceso-de-PAT-4.png)
+_Proceso de PAT: Paso 2_
+
+![Proceso de PAT](Proceso-de-PAT-13.png)
+_Proceso de PAT: Paso 3_
+
+![Proceso de PAT](Proceso-de-PAT-24.png)
+_Proceso de PAT: Paso 4_
+
+![Proceso de PAT](Proceso-de-PAT-40.png)
+_Proceso de PAT: Paso 5_
+
 
 A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 1555, en este ejemplo) para identificar el dispositivo en el que se originó el paquete. La dirección de origen (SA, source address) es la dirección local interna con el número de puerto asignado TCP / UDP agregado. La dirección de destino (DA, destination address) es la dirección global externa con el número de puerto de servicio agregado. En este ejemplo, el puerto de servicio es 80, que es HTTP.
 
