--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -1,5 +1,5 @@
 ---
-title: NAT o enmascaramiento IP
+title: NAT estático, NAT dinámico y PAT
 date: 2022-02-08 13:30:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, smr, teoría]
@@ -97,7 +97,7 @@ NAT también usa los conceptos de local o global con relación a las direcciones
 - **Dirección local**: Una dirección local es cualquier dirección que aparece en la parte interna de la red. Se puede ver como la dirección privada.
 - **Dirección global**: Una dirección global es cualquier dirección que aparece en la parte externa de la red. Se puede ver como la dirección pública.
 
-Los términos «interna» y «externa» se combinan con los términos «global» y «local» para hacer referencia a direcciones específicas. El router NAT, R2 en la figura, es el punto de demarcación entre las redes internas y externas. R2 está configurado con un pool de direcciones públicas para asignar a los hosts internos. Consulta la tabla de red y NAT de la figura para obtener la siguiente explicación de cada uno de los tipos de direcciones NAT.
+Los términos "interna" y "externa" se combinan con los términos "global" y "local" para hacer referencia a direcciones específicas. El router NAT, R2 en la figura, es el punto de demarcación entre las redes internas y externas. R2 está configurado con un pool de direcciones públicas para asignar a los hosts internos. Consulta la tabla de red y NAT de la figura para obtener la siguiente explicación de cada uno de los tipos de direcciones NAT.
 
 ![Funcionamiento de un NAT](Terminologia-de-NAT.png)
 _Terminología de NAT_
@@ -181,6 +181,13 @@ La traducción de la dirección del puerto (PAT, Port Address Translation), tamb
 
 Con PAT, se pueden asignar varias direcciones a una o más direcciones, debido a que cada dirección privada también se rastrea con un número de puerto. Cuando un dispositivo inicia una comunicación, genera un valor de puerto de origen TCP o UDP para identificar de forma única la sesión. Cuando el router NAT recibe un paquete del cliente, utiliza su número de puerto de origen para identificar de forma exclusiva la traducción NAT específica.
 
+![Proceso de PAT](Proceso-de-PAT.gif)
+_Proceso de PAT_
+
+<details class="card mb-2">
+  <summary class="card-header">Proceso de PAT paso a paso</summary>
+  <div class="card-body" markdown="1">
+
 ![Proceso de PAT](Proceso-de-PAT-0.png)
 _Proceso de PAT: Paso 1_
 
@@ -196,6 +203,9 @@ _Proceso de PAT: Paso 4_
 ![Proceso de PAT](Proceso-de-PAT-40.png)
 _Proceso de PAT: Paso 5_
 
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 A medida que el R2 procesa cada paquete, utiliza un número de puerto (1331 y 1555, en este ejemplo) para identificar el dispositivo en el que se originó el paquete. La dirección de origen (SA, source address) es la dirección local interna con el número de puerto asignado TCP / UDP agregado. La dirección de destino (DA, destination address) es la dirección global externa con el número de puerto de servicio agregado. En este ejemplo, el puerto de servicio es 80, que es HTTP.
 
@@ -251,26 +261,35 @@ El CLIENTE lo configuraremos para que la ruta por defecto apunte a ROUTER.
 
 Si el navegador en el CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como el CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto al ROUTER. Si el ROUTER tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP del CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web cuya dirección es 225.10.2.150. Cuando el servidor web le conteste, el ROUTER sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente, es decir, sin enterarse de nada.
 
-![img-description](ejemploNat2.png)
+![Ejemplo enmascaramiento IP sin cambio de puerto](ejemploNat2.png)
 _Ejemplo enmascaramiento IP sin cambio de puerto_
 
-![img-description](ejemploNat3.png)
+![Ejemplo enmascaramiento IP con cambio de puerto](ejemploNat3.png)
 _Ejemplo enmascaramiento IP con cambio de puerto_
 
 {:.subsubsection}
 #### Otro ejemplo de funcionamiento PAT
 
-![imgDescription](dynamic-pat-initial.png)
+![Ejemplo de enmascaramiento IP: Envío](dynamic-pat-initial.png)
 _Ejemplo de enmascaramiento IP: Envío_
 
-![imgDescription](dynamic-pat-return.png)
+![Ejemplo de enmascaramiento IP: Respuesta](dynamic-pat-return.png)
 _Ejemplo de enmascaramiento IP: Respuesta_
 
-![imgDescription](dynamic-pat-failed-inbound-packet.png)
-_Ejemplo de enmascaramiento IP: Conflicto de puerto_
+<details class="card mb-2">
+  <summary class="card-header question">¿Por qué los puertos también se traducen aleatoriamente?</summary>
+  <div class="card-body" markdown="1">
 
-![imgDescription](dynamic-pat-non-random-src-port-v5.png)
+![Ejemplo de enmascaramiento IP: Conflicto de mismo puerto](dynamic-pat-non-random-src-port-v5.png)
 _Ejemplo de enmascaramiento IP: Conflicto de mismo puerto_
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+![Ejemplo de enmascaramiento IP: Fallo de traducción](dynamic-pat-failed-inbound-packet.png)
+_Ejemplo de enmascaramiento IP: Fallo de traducción_
+
 
 ## Bibliografía
 
