--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -47,8 +47,8 @@ img_path: /assets/img/redes-locales-22-23/
 ## Evaluación 3
 
 - UD13 - [Capa de Transporte](/posts/capa-transporte)
-- UD14 - NAT estático, dinámico y PAT: [NAT o enmascaramiento IP](/posts/nat/)
-- UD15 - IPv6: [Protocolo IPv6](/posts/protocolo-ipv6/)
+- UD14 - [NAT estático, NAT dinámico y PAT](/posts/nat/)
+- UD15 - [Protocolo IPv6](/posts/protocolo-ipv6/)
 - UD16 - [Capa de Aplicación](/posts/capa-aplicacion/)
 - UD17 - [Resolución de conflictos en una red local](/posts/resolucion-conflictos-lan)
 - UD18 - [Protección, vigilancia y soporte de redes](/posts/proteccion-vigilancia-soporte-redes)
@@ -86,4 +86,6 @@ El usuario es "alumno" y la contraseña es "alumno".
 ## Enlaces increíbles 🔥
 
 - [CCNA Desde Cero](https://ccnadesdecero.com/)
+- [CCNA Desde Cero ES](https://ccnadesdecero.es/)
 - [NASeros (YouTube)](https://www.youtube.com/c/Naseros)
+- [NASeros](https://naseros.com/)
