--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -197,7 +197,7 @@ Se irán procesando en cascada sobreescribiendose unos a otros.
   <summary class="card-header question">¿Qué son y para qué sirven los combinators o combinadores?</summary>
   <div class="card-body" markdown="1">
 
-Al margen de la selección «básica» de elementos a través de CSS, que suele realizarse mediante clases e IDs, existe un amplio abanico de métodos para seleccionar elementos dependiendo de la estructura del documento HTML denominados combinadores CSS:
+Al margen de la selección "básica" de elementos a través de CSS, que suele realizarse mediante clases e IDs, existe un amplio abanico de métodos para seleccionar elementos dependiendo de la estructura del documento HTML denominados combinadores CSS:
 
 | Nombre  | Símbolo  | Ejemplo  | Significado |
 |---|---|---|---|
