arreglo problema de la imagen

--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -257,6 +257,12 @@ Debemos tener en cuenta que los pasos 1 y 4 se producen dentro de una LAN, mient
 ![img-description](ejemploNat.png)
 _Esquema de un ejemplo de utilización de enmascaramiento IP_
 
+{:.question}
+¿De que tipo es la red del CLIENTE?
+
+{:.question}
+¿Tiene el ROUTER la primera @ disponible de la red?
+
 El CLIENTE lo configuraremos para que la ruta por defecto apunte a ROUTER.
 
 Si el navegador en el CLIENTE solicita una página al servidor 225.10.2.150 por el puerto 1345, como el CLIENTE no tiene acceso por red al host 225.10.2.150, mandará el mensaje por la ruta de defecto al ROUTER. Si el ROUTER tiene habilitado el servicio de enmascaramiento, sustituirá la dirección IP del CLIENTE por la suya propia en la interfaz WAN (213.97.2.12) y el número de puerto por otro que tenga libre, haciéndole la petición al servidor web cuya dirección es 225.10.2.150. Cuando el servidor web le conteste, el ROUTER sustituirá la dirección IP WAN suya (213.97.2.12) por la dirección IP propia en su red de área local (10.1.1.1) y se lo mandará a CLIENTE por el puerto por el que este se quedó esperando, en nuestro ejemplo, el 1345. De este modo, CLIENTE ha recibido sus datos transparentemente, es decir, sin enterarse de nada.
