--- a/_posts/2022-05-08-vlsm.md
+++ b/_posts/2022-05-08-vlsm.md
@@ -1,10 +1,10 @@
 ---
-title: VLSM
+title: Subredes VLSM
 date: 2022-05-08 17:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
 tags: [redes locales, subnetting, subredes, vlsm]
+img_path: /assets/img/vlsm/
 ---
-
 
 ## Introducción
 
@@ -12,31 +12,90 @@ VLSM del Inglés Variable Length Subnet Mask o Máscara de Subred de Longitud Va
 
 ## ¿Qué es VLSM?
 
-En las subredes tradicionales se aplica la misma máscara de subred para todas las subredes. Esto significa que cada subred tiene el mismo número de direcciones de host disponibles. Como se ilustra en el lado izquierdo de la imagen, las subredes tradicionales crean subredes de igual tamaño. Cada subred en un esquema tradicional usa la misma máscara de subred. Como se muestra en el lado derecho de la imagen, VLSM permite que un espacio de red se divida en partes desiguales. Con VLSM, la máscara de subred variará dependiendo de cuántos bits se hayan prestado para una subred particular, por lo tanto, la parte "variable" del VLSM.
+En las subredes tradicionales se aplica la misma máscara de subred para todas las subredes. Esto significa que cada subred tiene el mismo número de direcciones de host disponibles. Como se ilustra en el lado izquierdo de la imagen, las subredes tradicionales crean subredes de igual tamaño. Cada subred en un esquema tradicional usa la misma máscara de subred. Como se muestra en el lado derecho de la siguiente figura, VLSM permite que un espacio de red se divida en partes desiguales. Con VLSM, la máscara de subred variará dependiendo de cuántos bits se hayan prestado para una subred particular, por lo tanto, la parte "variable" del VLSM.
 
-![img-description](/assets/img/vlsm/SubredesVLSM.png)
+![Subredes VLSM](subredesVLSM.png)
 _Subredes VLSM_
 
 VLSM solo está dividiendo en subredes una subred. La misma topología utilizada anteriormente se muestra en la imagen. Nuevamente, utilizaremos la red 192.168.20.0/24 y la subred para siete subredes, una para cada una de las cuatro LAN y una para cada una de las tres conexiones entre los routers.
 
-![img-description](/assets/img/vlsm/DivisionDeRedes.png)
-_División de Redes_
+![División de redes](divisionDeRedes.png)
+_División de redes_
 
 ## Ejemplo de desperdicio de direcciones
 
 Si se utiliza una máscara de subred de tamaño fijo (la misma máscara de subred en todas las subredes), todas las subredes van a tener el mismo tamaño. Por ejemplo, si la subred más grande necesita 200 hosts, todas las subredes van a tener el mismo tamaño de 256 direcciones IP (nota: se ha redondeado hacia arriba, hacia la siguiente potencia, de 2). Si una subred solo necesita 10 equipos se asigna una subred de 256 direcciones, aunque las restantes 246 direcciones no se utilicen. Incluso los enlaces seriales (WAN), que solo necesitan dos direcciones IP, requieren una subred de 256 direcciones. (nota: en realidad serían 254 direcciones asignables a los hosts, ya que hay que descontar la dirección de la subred (todo ceros en la parte de la identificación del host) y la dirección de broadcast (todo unos en la parte de la identificación del host)).
 
+### Esquema de subredes de VLSM
+
+La figura siguiente muestra cómo la red 192.168.20.0/24 se dividió en ocho subredes del mismo tamaño con 30 direcciones de host utilizables por subred. Se usan cuatro subredes para las LAN y tres subredes para las conexiones entre los routers.
+
+![Esquema básico de subredes](esquemaBasicoDeSubredes.png)
+_Esquema básico de subredes_
+
+Sin embargo, las conexiones entre los routers requieren solo dos direcciones de host por subred (una dirección de host para cada interfaz de Router). Actualmente, todas las subredes tienen 30 direcciones de host utilizables por subred. Para evitar desperdiciar 28 direcciones por subred, VLSM puede usarse para crear subredes más pequeñas para las conexiones entre routers.
+
+Para crear subredes más pequeñas para los enlaces entre routers, se dividirá una de las subredes. En este ejemplo, la última subred, 192.168.20.224/27, se subdividirá aún más. La imagen muestra que la última subred se ha dividido en subredes utilizando la máscara de subred 255.255.255.252 o /30.
+
+### Esquema de subredes de VLSM
+
+<details class="card mb-2">
+  <summary class="card-header question">¿Por qué /30?</summary>
+  <div class="card-body" markdown="1">
+
+Recuerda que cuando se conoce el número de direcciones de host necesarias, se puede usar la fórmula 2<sup>n</sup> – 2 (donde n es igual al número de bits de host restantes). Para proporcionar dos direcciones utilizables, se deben dejar dos bits de host en la parte del host.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+Debido a que hay cinco bits de host en el espacio de direcciones subred 192.168.20.224/27, se pueden tomar prestados tres bits más, dejando dos bits en la porción de host. Los cálculos en este punto son exactamente los mismos que los utilizados para las subredes tradicionales. Se prestan los bits y se determinan los rangos de subred. La imagen muestra cómo las cuatro subredes /27 se han asignado a las LAN y tres de las subredes /30 se han asignado a los enlaces entre routers.
+
+![Ejemplo VLSM](ejemploVLSM.png)
+_Ejemplo VLSM_
+
+Este esquema de subredes VLSM reduce el número de direcciones por subred a un tamaño apropiado para las redes que requieren menos subredes. La subred subred 7 para enlaces entre routers permite que las subredes 4, 5 y 6 estén disponibles para redes futuras, así como cinco subredes adicionales disponibles para conexiones entre routers.
+
+> Cuando uses VLSM, siempre comienza por satisfacer los requisitos de host de la subred más grande. Continúa haciendo subredes hasta que se cumplan los requisitos de host de la subred más pequeña.
+{:.prompt-tip}
+
+## Asignación de Dirección de Topología VLSM
+
+Usando las subredes VLSM, las redes LAN y entre routers se pueden abordar sin desperdicio innecesario.
+
+La imagen muestra las asignaciones de direcciones de red y las direcciones IPv4 asignadas a cada interfaz de Router.
+
+![Asignación direcciones topología VLSM](asignacionDireccionesTopologiaVLSM.png)
+_Asignación direcciones topología VLSM_
+
+Usando un esquema de direccionamiento común, la primera dirección IPv4 del host para cada subred se asigna a la interfaz LAN del Router. Los hosts en cada subred tendrán una dirección IPv4 de host del rango de direcciones de host para esa subred y una máscara adecuada. Los hosts utilizarán la dirección de la interfaz LAN del Router adjunto como la dirección de puerta de enlace predeterminada.
+
+La tabla muestra las direcciones de red y el rango de direcciones de host para cada red. La dirección de puerta de enlace predeterminada se muestra para las cuatro LAN.
+
+|      –     |  Dirección de red |      Rango de direcciones de host     | Dirección de puerta de enlace predeterminada |
+|:----------:|:-----------------:|:-------------------------------------:|:--------------------------------------------:|
+| Edificio A | 192.168.20.0/27   | 192.168.20.1/27 a 192.168.20.30/27    | 192.168.20.1/27                              |
+| Edificio B | 192.168.20.32/27  | 192.168.20.33/27 a 192.168.20.62/27   | 192.168.20.33/27                             |
+| Edificio C | 192.168.20.64/27  | 192.168.20.65/27 a 192.168.20.94/27   | 192.168.20.65/27                             |
+| Edificio D | 192.168.20.96/27  | 192.168.20.97/27 a 192.168.20.126/27  | 192.168.20.97/27                             |
+| R1-R2      | 192.168.20.224/30 | 192.168.20.225/30 a 192.168.20.226/30 |                                              |
+| R2-R3      | 192.168.20.228/30 | 192.168.20.229/30 a 192.168.20.230/30 |                                              |
+| R3-R4      | 192.168.20.232/30 | 192.168.20.233/30 a 192.168.20.234/30 |                                              |
+
 ## Ejercicio resuelto en vídeo
 
-192.168.1.0/24
+Dada la red 192.168.1.0/24 crear 4 subredes con los siguientes requisitos:
 
-60 host, 120 hosts, 10 hosts, 24 hosts.
+- 1 subred con 60 host
+- 1 subred con 120 hosts
+- 1 subred con 10 hosts
+- 1 subred con 24 hosts
 
 <iframe src="https://www.youtube.com/embed/KsMXVnqQ3sg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Bibliografía
 
+- [VLSM: Máscaras de Subred de Longitud Variable](https://ccnadesdecero.es/vlsm-mascaras-subred-longitud-variable/)
 - [Subredes VLSM paso a paso](https://arcadio.gq/subredes-vlsm-paso-a-paso.html#)
 - [Classless Inter-Domain Routing (Wikipedia)](https://es.wikipedia.org/wiki/Classless_Inter-Domain_Routing)
 - [CIDR: el classles inter-domain routing en detalle](https://www.ionos.es/digitalguide/servidores/know-how/classless-inter-domain-routing/)
-- [VLSM: Máscaras de Subred de Longitud Variable](https://ccnadesdecero.es/vlsm-mascaras-subred-longitud-variable/)
