--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -37,6 +37,16 @@ img_path: /assets/img/redes-locales-22-23/
 - UD11 - WLAN: [Redes inalámbricas](/posts/redes-inalambricas/)
 - UD12 - [¿Qué son las VLAN?](/posts/vlan/)
 
+<details class="card mb-2">
+  <summary class="card-header question">¿Sabias que se pueden crear subredes de diferentes tamaños?</summary>
+  <div class="card-body" markdown="1">
+
+Puedes leer el artículo [Subredes VLSM](/posts/vlsm/) si quieres saber cómo.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 ### Prácticas
 
 - P07 - [Práctica: Subredes sin enrutamiento en Packet Tracer](/posts/practica-packet-tracer-red-estatica/)
