--- a/_posts/2022-01-22-subredes.md
+++ b/_posts/2022-01-22-subredes.md
@@ -2,7 +2,7 @@
 title: ¿Qué son las subredes?
 date: 2022-01-22 20:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
-tags: [redes locales, subredes, subnetting, teoría, smr]
+tags: [redes locales, subredes, subnetting, teoría, smr, flsm]
 ---
 
 ## ¿Qué son las subredes?
