--- a/_posts/2022-05-08-vlsm.md
+++ b/_posts/2022-05-08-vlsm.md
@@ -6,10 +6,12 @@ tags: [redes locales, subnetting, subredes, vlsm]
 img_path: /assets/img/vlsm/
 ---
 
+{:.section}
 ## Introducción
 
 VLSM del Inglés Variable Length Subnet Mask o Máscara de Subred de Longitud Variable en español, es una técnica que se creó para hacer un uso más eficiente del espacio de direccionamiento de una red. A diferencia de la técnica tradicional de subdividir redes (FLSM), VLSM se enfoca en el número de Hosts de cada red, así a cada subred se le asigna una máscara diferente en función del número de hosts que ésta va a conectar.
 
+{:.section}
 ## ¿Qué es VLSM?
 
 En las subredes tradicionales se aplica la misma máscara de subred para todas las subredes. Esto significa que cada subred tiene el mismo número de direcciones de host disponibles. Como se ilustra en el lado izquierdo de la imagen, las subredes tradicionales crean subredes de igual tamaño. Cada subred en un esquema tradicional usa la misma máscara de subred. Como se muestra en el lado derecho de la siguiente figura, VLSM permite que un espacio de red se divida en partes desiguales. Con VLSM, la máscara de subred variará dependiendo de cuántos bits se hayan prestado para una subred particular, por lo tanto, la parte "variable" del VLSM.
@@ -22,11 +24,13 @@ VLSM solo está dividiendo en subredes una subred. La misma topología utilizada
 ![División de redes](divisionDeRedes.png)
 _División de redes_
 
+{:.section}
 ## Ejemplo de desperdicio de direcciones
 
 Si se utiliza una máscara de subred de tamaño fijo (la misma máscara de subred en todas las subredes), todas las subredes van a tener el mismo tamaño. Por ejemplo, si la subred más grande necesita 200 hosts, todas las subredes van a tener el mismo tamaño de 256 direcciones IP (nota: se ha redondeado hacia arriba, hacia la siguiente potencia, de 2). Si una subred solo necesita 10 equipos se asigna una subred de 256 direcciones, aunque las restantes 246 direcciones no se utilicen. Incluso los enlaces seriales (WAN), que solo necesitan dos direcciones IP, requieren una subred de 256 direcciones. (nota: en realidad serían 254 direcciones asignables a los hosts, ya que hay que descontar la dirección de la subred (todo ceros en la parte de la identificación del host) y la dirección de broadcast (todo unos en la parte de la identificación del host)).
 
-### Esquema de subredes de VLSM
+{:.section}
+## Esquema de subredes de VLSM
 
 La figura siguiente muestra cómo la red 192.168.20.0/24 se dividió en ocho subredes del mismo tamaño con 30 direcciones de host utilizables por subred. Se usan cuatro subredes para las LAN y tres subredes para las conexiones entre los routers.
 
@@ -37,7 +41,8 @@ Sin embargo, las conexiones entre los routers requieren solo dos direcciones de 
 
 Para crear subredes más pequeñas para los enlaces entre routers, se dividirá una de las subredes. En este ejemplo, la última subred, 192.168.20.224/27, se subdividirá aún más. La imagen muestra que la última subred se ha dividido en subredes utilizando la máscara de subred 255.255.255.252 o /30.
 
-### Esquema de subredes de VLSM
+{:.section}
+## Esquema de subredes de VLSM
 
 <details class="card mb-2">
   <summary class="card-header question">¿Por qué /30?</summary>
@@ -59,6 +64,7 @@ Este esquema de subredes VLSM reduce el número de direcciones por subred a un t
 > Cuando uses VLSM, siempre comienza por satisfacer los requisitos de host de la subred más grande. Continúa haciendo subredes hasta que se cumplan los requisitos de host de la subred más pequeña.
 {:.prompt-tip}
 
+{:.section}
 ## Asignación de Dirección de Topología VLSM
 
 Usando las subredes VLSM, las redes LAN y entre routers se pueden abordar sin desperdicio innecesario.
@@ -82,6 +88,7 @@ La tabla muestra las direcciones de red y el rango de direcciones de host para c
 | R2-R3      | 192.168.20.228/30 | 192.168.20.229/30 a 192.168.20.230/30 |                                              |
 | R3-R4      | 192.168.20.232/30 | 192.168.20.233/30 a 192.168.20.234/30 |                                              |
 
+{:.section}
 ## Ejercicio resuelto en vídeo
 
 Dada la red 192.168.1.0/24 crear 4 subredes con los siguientes requisitos:
@@ -93,6 +100,7 @@ Dada la red 192.168.1.0/24 crear 4 subredes con los siguientes requisitos:
 
 <iframe src="https://www.youtube.com/embed/KsMXVnqQ3sg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+{:.section}
 ## Bibliografía
 
 - [VLSM: Máscaras de Subred de Longitud Variable](https://ccnadesdecero.es/vlsm-mascaras-subred-longitud-variable/)
