--- a/_posts/2022-05-08-vlsm.md
+++ b/_posts/2022-05-08-vlsm.md
@@ -16,12 +16,12 @@ VLSM del Inglés Variable Length Subnet Mask o Máscara de Subred de Longitud Va
 
 En las subredes tradicionales se aplica la misma máscara de subred para todas las subredes. Esto significa que cada subred tiene el mismo número de direcciones de host disponibles. Como se ilustra en el lado izquierdo de la imagen, las subredes tradicionales crean subredes de igual tamaño. Cada subred en un esquema tradicional usa la misma máscara de subred. Como se muestra en el lado derecho de la siguiente figura, VLSM permite que un espacio de red se divida en partes desiguales. Con VLSM, la máscara de subred variará dependiendo de cuántos bits se hayan prestado para una subred particular, por lo tanto, la parte "variable" del VLSM.
 
-![Subredes VLSM](subredesVLSM.png)
+![Subredes VLSM](SubredesVLSM.png)
 _Subredes VLSM_
 
 VLSM solo está dividiendo en subredes una subred. La misma topología utilizada anteriormente se muestra en la imagen. Nuevamente, utilizaremos la red 192.168.20.0/24 y la subred para siete subredes, una para cada una de las cuatro LAN y una para cada una de las tres conexiones entre los routers.
 
-![División de redes](divisionDeRedes.png)
+![División de redes](DivisionDeRedes.png)
 _División de redes_
 
 {:.section}
