--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -64,7 +64,7 @@ Puedes leer el artículo [Subredes VLSM](/posts/vlsm/) si quieres saber cómo.
 - UD18 - [Protección, vigilancia y soporte de redes](/posts/proteccion-vigilancia-soporte-redes)
 
 - P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer/)
-- [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
+- P12 - [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
 - [Práctica: Servicio DHCP, DNS, HTTP y PAT en Packet Tracer](/posts/practica-servicio-dhcp-dns-http-pat-packet-tracer/)
 
 ## Videos para poner en bucle 🔁
