--- a/_posts/2022-05-20-redes-locales-21-22.md
+++ b/_posts/2022-05-20-redes-locales-21-22.md
@@ -62,7 +62,7 @@ tags: [redes locales]
 - [Práctica: VLAN con Packet Tracer](/posts/practica-vlan-packet-tracer)
 - [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
 - [Práctica: WLAN con Packet Tracer](/posts/practica-wlan-packet-tracer)
-- [Práctica: Servicio DHCP, DNS, HTTP y PAT en Packet Tracer](/posts/practica-servicio-dhcp-dns-http-pat-packet-tracer/)
+- [Práctica: Capa de aplicación](/posts/practica-capa-aplicacion/)
 
 ## Cosas a mejorar...
 
