--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -65,7 +65,8 @@ Puedes leer el artículo [Subredes VLSM](/posts/vlsm/) si quieres saber cómo.
 
 - P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer/)
 - P12 - [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
-- [Práctica: Servicio DHCP, DNS, HTTP y PAT en Packet Tracer](/posts/practica-servicio-dhcp-dns-http-pat-packet-tracer/)
+- PXX - [Práctica: IPv6 en Packet Tracer](/posts/)
+- PXX - [Práctica: Capa de aplicación](practica-capa-aplicacion/)
 
 ## Videos para poner en bucle 🔁
 
