--- a/_posts/2022-11-13-capa-red.md
+++ b/_posts/2022-11-13-capa-red.md
@@ -71,6 +71,8 @@ Hago una petición broadcast solicitando que el equipo que tiene esta IP respond
 ![Ejemplo de ARP](arp.png)
 _Ejemplo de ARP_
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UFa9O0GfnsY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 ### 4.5. Protocolo ICMP
 
 ICMP (Internet Control Message Protocol) o Protocolo de mensajes de control de Internet.
