--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -63,10 +63,10 @@ Puedes leer el artículo [Subredes VLSM](/posts/vlsm/) si quieres saber cómo.
 - UD17 - [Resolución de conflictos en una red local](/posts/resolucion-conflictos-lan)
 - UD18 - [Protección, vigilancia y soporte de redes](/posts/proteccion-vigilancia-soporte-redes)
 
-- P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer/)
+- P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer)
 - P12 - [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
-- PXX - [Práctica: IPv6 en Packet Tracer](/posts/)
-- PXX - [Práctica: Capa de aplicación](practica-capa-aplicacion/)
+- PXX - [Práctica: IPv6 en Packet Tracer](/posts/practica-ipv6)
+- PXX - [Práctica: Capa de aplicación](/posts/practica-capa-aplicacion/)
 
 ## Videos para poner en bucle 🔁
 
