--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -66,7 +66,7 @@ Puedes leer el artículo [Subredes VLSM](/posts/vlsm/) si quieres saber cómo.
 - P11 - [Práctica: VLAN en Packet Tracer](/posts/practica-vlan-packet-tracer)
 - P12 - [Práctica: NAT con Packet Tracer](/posts/practica-nat-packet-tracer)
 - P13 - [Práctica: IPv6 en Packet Tracer](/posts/practica-ipv6)
-- PXX - [Práctica: Capa de aplicación](/posts/practica-capa-aplicacion/)
+- P14 - [Práctica: Capa de aplicación](/posts/practica-capa-aplicacion/)
 
 ## Videos para poner en bucle 🔁
 
